--- a/secondAppAngular2/angular.json
+++ b/secondAppAngular2/angular.json
@@ -3,14 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "secondAppAngular": {
+    "secondAppAngular2": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
-          "style": "sass",
+        "@schematics/angular:class": {
           "skipTests": true
         },
-        "@schematics/angular:class": {
+        "@schematics/angular:component": {
           "skipTests": true
         },
         "@schematics/angular:directive": {
@@ -42,18 +41,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/second-app-angular",
+            "outputPath": "dist/second-app-angular2",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -94,10 +92,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "secondAppAngular:build:production"
+              "browserTarget": "secondAppAngular2:build:production"
             },
             "development": {
-              "browserTarget": "secondAppAngular:build:development"
+              "browserTarget": "secondAppAngular2:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -105,7 +103,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "secondAppAngular:build"
+            "browserTarget": "secondAppAngular2:build"
           }
         },
         "test": {
@@ -115,13 +113,12 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.css"
             ],
             "scripts": []
           }
@@ -129,5 +126,5 @@
       }
     }
   },
-  "defaultProject": "secondAppAngular"
+  "defaultProject": "secondAppAngular2"
 }
